# cookie-run-kingdom-wiki-scraper-rs

./: .gitignore  Cargo.toml  README.md  repr_run.sh
src/: character.rs  main.rs  rarity.rs  scraper.rs  t_characters.rs  t_scraper.rs  tools.rs
src/api/: character.rs  mod.rs  rarity.rs  topping.rs  treasure.rs
