[package]
name = "crk-wiki-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"

serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_repr = { version = "0.1", optional = true }
ts-rs = { version = "6.0", features = ["serde-compat"] }

strum = "0.23"
strum_macros = "0.23"

regex = "1.5"

[features]
use-enum-u8 = ["serde_repr"] # use serde_repr on enums to de/serialize them with u8.